#RE22645 - Addeed new endpoint
